fix(choose-layout): add missing padding

--- a/src/app/components/choose-layout/choose-layout.component.scss
+++ b/src/app/components/choose-layout/choose-layout.component.scss
@@ -48,6 +48,7 @@
 			}
 		}
 		.mode {
+			margin-left: 8px;
 			max-width: 30%;
 		}
 	}
